# n8n-sso

./: .env.example  .gitignore  .gitlab-ci.yml  CASDOOR_LOGOUT_WEBHOOK.md  CODEBASE_ANALYSIS.md  Dockerfile  Dockerfile.Deploy  Dockerfile.Logging  ENHANCED_LOGIN_FLOW_FIX.md  LICENSE  N8N_SSO_COOKIE_AUTH.md  README.md  TEMPLATE_WORKFLOW_PROVISIONING.md  debug_shared_workflow.py  docker-compose.logging.yml  docker-compose.prod.yml  docker-compose.yml  fix_orphaned_workflows.py  pyproject.toml  requirements.txt  test_manual_workflow.py  test_oauth_flow.py  test_redirect_fix.py  test_session_decision_logic.py  test_sharing_logic.py  test_sso_flow.py  test_template_workflow.py  verify_deployment.py
apps/: main.py
apps/auth/: casdoor_utils.py  cookie_bridge.py  oauth_state.py  routers.py  services.py  webhook_services.py
apps/core/: error_handling.py
apps/core/routers/: health.py
apps/integrations/: n8n_client.py  n8n_db.py  template_manager.py
apps/metrics/: routers.py
apps/templates/: 02-Google-Calendar&Telegram.json
apps/tests/: README.md  __init__.py  run_all_tests.py  test_auth_routers.py  test_auth_services.py  test_cookie_fix.py  test_core_error_handling.py  test_error_handling.py  test_fresh_login_flow.py  test_handle_callback.py  test_integration_end_to_end.py  test_logout_webhook.py  test_n8n_client.py  test_n8n_db_operations.py  test_oauth_flow.py  test_redirect_fix.py  test_settings_config.py  test_sso_flow.py  test_webhook_payload.py
conf/: enhanced_logging.py  logging.py  settings.py
